Added photos to the cards

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="cards">
 
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="https://media.istockphoto.com/photos/colorful-ice-cream-border-picture-id930933962?k=20&m=930933962&s=612x612&w=0&h=9IaCa5cNffuXfvz83UGqkGldNS4pba7rXf4Q-MT9Xq8=" class="card-img-top" alt="...">
       <div class="card-body">
         <h2 class="card-title">Card title</h2>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdb9sB-KJUoepRoqINgrWYYebEHisUHHUGNQ&usqp=CAU" class="card-img-top" alt="...">
       <div class="card-body">
         <h2 class="card-title">Card title</h2>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -46,7 +46,7 @@
     </div>
 
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="https://thumbs.dreamstime.com/z/lots-rainbow-cupcakes-22626459.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h2 class="card-title">Card title</h2>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -63,7 +63,7 @@
     </div>
 
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="https://thumbs.dreamstime.com/b/candy-19828121.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h2 class="card-title">Card title</h2>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -80,7 +80,7 @@
     </div>
 
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="https://media.istockphoto.com/photos/dark-chocolate-bar-on-rustic-wood-table-picture-id463813283?b=1&k=20&m=463813283&s=170667a&w=0&h=x-SXgRiiAkH-ilp7dZPZUQWdq0V7-4jwDf4BK8PRd0M=" class="card-img-top" alt="...">
       <div class="card-body">
         <h2 class="card-title">Card title</h2>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -97,7 +97,7 @@
     </div>
 
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="https://media.istockphoto.com/photos/kale-picture-id135091129?k=20&m=135091129&s=612x612&w=0&h=iROkk2FGP2M4Dz6PyHCZvFQ81Yuy5dXR0rC-Cddye3c=" class="card-img-top" alt="...">
       <div class="card-body">
         <h2 class="card-title">Card title</h2>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
