Worked on layout with Bootstrap Grid. Changed img alt text and H2 text.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-  <div class="cards">
+  <div class="container cards">
+    <div class="row">
 
-    <div class="card" style="width: 18rem;">
-      <img src="https://media.istockphoto.com/photos/colorful-ice-cream-border-picture-id930933962?k=20&m=930933962&s=612x612&w=0&h=9IaCa5cNffuXfvz83UGqkGldNS4pba7rXf4Q-MT9Xq8=" class="card-img-top" alt="...">
+    <div class="card col-sm" style="width: 18rem;">
+      <img src="https://media.istockphoto.com/photos/colorful-ice-cream-border-picture-id930933962?k=20&m=930933962&s=612x612&w=0&h=9IaCa5cNffuXfvz83UGqkGldNS4pba7rXf4Q-MT9Xq8=" class="card-img-top" alt="Ice Cream Flavors">
       <div class="card-body">
-        <h2 class="card-title">Card title</h2>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h2 class="card-title">Ice Cream</h2>
+        <p class="card-text">Youse Cream</p>
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">An item</li>
@@ -28,11 +29,11 @@
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdb9sB-KJUoepRoqINgrWYYebEHisUHHUGNQ&usqp=CAU" class="card-img-top" alt="...">
+    <div class="card col-sm" style="width: 18rem;">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQdb9sB-KJUoepRoqINgrWYYebEHisUHHUGNQ&usqp=CAU" class="card-img-top" alt="Frozen Yogurt">
       <div class="card-body">
-        <h2 class="card-title">Card title</h2>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h2 class="card-title">Frozen Yogurt</h2>
+        <p class="card-text">Froyo</p>
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">An item</li>
@@ -45,11 +46,30 @@
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
-      <img src="https://thumbs.dreamstime.com/z/lots-rainbow-cupcakes-22626459.jpg" class="card-img-top" alt="...">
+    <div class="card col-sm" style="width: 18rem;">
+      <img src="https://thumbs.dreamstime.com/z/lots-rainbow-cupcakes-22626459.jpg" class="card-img-top" alt="Cupcakes">
       <div class="card-body">
-        <h2 class="card-title">Card title</h2>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h2 class="card-title">Cupcakes</h2>
+        <p class="card-text">Small, but effective</p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">An item</li>
+        <li class="list-group-item">A second item</li>
+        <li class="list-group-item">A third item</li>
+      </ul>
+      <div class="card-body">
+        <a href="#" class="card-link">Card link</a>
+        <a href="#" class="card-link">Another link</a>
+      </div>
+    </div>
+    </div>
+
+    <div class="row">
+    <div class="card col-sm" style="width: 18rem;">
+      <img src="https://thumbs.dreamstime.com/b/candy-19828121.jpg" class="card-img-top" alt="Colorful Candy">
+      <div class="card-body">
+        <h2 class="card-title">Candy</h2>
+        <p class="card-text">All your childhood favorites</p>
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">An item</li>
@@ -62,11 +82,11 @@
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
-      <img src="https://thumbs.dreamstime.com/b/candy-19828121.jpg" class="card-img-top" alt="...">
+    <div class="card col-sm" style="width: 18rem;">
+      <img src="https://media.istockphoto.com/photos/dark-chocolate-bar-on-rustic-wood-table-picture-id463813283?b=1&k=20&m=463813283&s=170667a&w=0&h=x-SXgRiiAkH-ilp7dZPZUQWdq0V7-4jwDf4BK8PRd0M=" class="card-img-top" alt="Choclate bar on rustic wood table">
       <div class="card-body">
-        <h2 class="card-title">Card title</h2>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h2 class="card-title">Chocolate</h2>
+        <p class="card-text">Chocolate</p>
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">An item</li>
@@ -79,11 +99,11 @@
       </div>
     </div>
 
-    <div class="card" style="width: 18rem;">
-      <img src="https://media.istockphoto.com/photos/dark-chocolate-bar-on-rustic-wood-table-picture-id463813283?b=1&k=20&m=463813283&s=170667a&w=0&h=x-SXgRiiAkH-ilp7dZPZUQWdq0V7-4jwDf4BK8PRd0M=" class="card-img-top" alt="...">
+    <div class="card col-sm" style="width: 18rem;">
+      <img src="https://media.istockphoto.com/photos/kale-picture-id135091129?k=20&m=135091129&s=612x612&w=0&h=iROkk2FGP2M4Dz6PyHCZvFQ81Yuy5dXR0rC-Cddye3c=" class="card-img-top" alt="Kale">
       <div class="card-body">
-        <h2 class="card-title">Card title</h2>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h2 class="card-title">Kale</h2>
+        <p class="card-text">Kale</p>
       </div>
       <ul class="list-group list-group-flush">
         <li class="list-group-item">An item</li>
@@ -95,24 +115,7 @@
         <a href="#" class="card-link">Another link</a>
       </div>
     </div>
-
-    <div class="card" style="width: 18rem;">
-      <img src="https://media.istockphoto.com/photos/kale-picture-id135091129?k=20&m=135091129&s=612x612&w=0&h=iROkk2FGP2M4Dz6PyHCZvFQ81Yuy5dXR0rC-Cddye3c=" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h2 class="card-title">Card title</h2>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">An item</li>
-        <li class="list-group-item">A second item</li>
-        <li class="list-group-item">A third item</li>
-      </ul>
-      <div class="card-body">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
-      </div>
-    </div>
-
+  </div>
   </div>
 
 
