added the sold out image. I couldnt get it to center, but it is on top of the product image.

--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
       </header>
       <section class="about">
         <div class="img-product">
-          <img src="https://previews.123rf.com/images/jcjgphotography/jcjgphotography1010/jcjgphotography101000022/7885751-pet-rock-on-grass.jpg" alt="Pet rock lying on grass">
+          <img src="https://previews.123rf.com/images/jcjgphotography/jcjgphotography1010/jcjgphotography101000022/7885751-pet-rock-on-grass.jpg" alt="Pet rock lying on grass" class="img-photo">
+          <img src="https://raw.githubusercontent.com/morecallan/css102-e6/master/images/soldOut.png" alt="Sold Out!" class="img-sold-out">
         </div>
         <p class="description">Rabbits ect. Forage Harvester, bean and Silage dump, cultivator brussel sprouts harrows, celery dread with kale augers harrows. Pick up truck livestock, pets and storage shed, troughs feed bale manure, is garden wheat oats at augers. . Haybine carrots soybeans, owls duck raising.</p>
         <p class="available">Unavailable!</p>
